--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "root",
     "password": "",
-    "database": "tourism_database",
+    "database": "travel_database",
     "host": "127.0.0.1",
     "dialect": "mysql",
     "logging": true
